# SurveyManagementReactPythonApp

./: .gitignore  DYNAMODB_MIGRATION.md  GRAPHQL_INTEGRATION.md  INSTALL.md  PYTHON_313_UPGRADE.md  README.md  SETUP_GUIDE.md  check_tables.py  package-lock.json  pyproject.toml  seed_graphql.py  setup-advanced.bat  setup.bat  setup.ps1  setup.sh  setup_python313.ps1  setup_python313.py  start.bat  start.ps1  test_customer_crud.html  test_graphql.html  test_property_create.json  test_property_delete.json  test_property_district_fields.json  test_property_district_unique.json  test_property_query.json  test_property_update.json  test_property_update_v2.json  test_schema_introspection.json  test_seeding.py  test_user_settings_graphql.py
.venv_new/: pyvenv.cfg
.venv_new/Scripts/: activate  activate.bat
Database Scripts/: schema.sql
backend/: .coverage  .env  .env.dynamodb  .env.example  README.md  create_tables.py  crud.py  database.py  graphql_schema.py  graphql_schema_simple.py  graphql_schema_strawberry_backup.py  main.py  models.py  models_fixed.py  pytest.ini  quick_setup_tables.py  requirements.txt  run_tests.ps1  run_tests.py  schemas.py  seed_database.py  seed_mock_data.py  setup_tables.py  start_local_dynamodb.py  survey_management.db  test_debugpy.py  test_graphene.py  test_graphql_townships.py  test_township_crud.py  test_townships.py
backend/routers/: board_configurations.py  customers.py  lookup.py  properties.py  surveys.py  townships.py  user_settings.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py  test_graphql.py
backend/tests/unit/: test_crud.py  test_database.py  test_models.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/__tests__/: setupTests.ts
frontend/src/__tests__/mocks/: mockData.ts
frontend/src/apollo/: client.ts
frontend/src/components/: Modal.tsx  Pagination.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/graphql/: queries.ts  userSettings.ts
frontend/src/hooks/: useBoardSettings.ts  useGraphQLApi.ts
frontend/src/pages/: Board.tsx  Customers.tsx  Properties.tsx  Surveys.tsx  Townships.tsx
frontend/src/pages/__tests__/: Board.basic.test.tsx  Board.comprehensive.test.tsx  Board.final.test.tsx  Board.functional.test.tsx  Board.integration.test.tsx  Board.simple.test.tsx  Board.stable.test.tsx  Board.test.tsx
